# login-with-axum

./: .dockerignore  .env.dev  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  deno.json  flake.nix  rust-toolchain.toml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: main.yml
client/: index.html  login.html  me.html
client/scripts/: location.ts  login.ts  me.ts
docker/: Dockerfile  compose.yml  generate-helper.py
migrations/: 0_create-table.sql
public/: index.html  login.html  me.html  signup.html
public/scripts/: location.mjs  login.js  me.js  signup.js  signup.ts  user.mjs  user.ts
src/: app.rs  entity.rs  error.rs  lib.rs  model.rs  provide.rs  registry.rs  repository.rs  router.rs  token.rs
src/app/: serve_html.rs
src/model/: users.rs
src/repository/: options.rs  user_passwords.rs  user_sessions.rs  users.rs
