[package]
name = "login-with-axum"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bcrypt = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
uuid = { version = "1.12", features = [ "v4", "serde" ] }
jsonwebtoken = { version = "9.3", default-features = false }
tokio = { version = "1.43", features = [ "rt", "macros", "signal", "time" ] }
tower-http = { version = "0.6", features = [ "trace", "fs", "redirect" ] }
axum = "0.8"
axum-extra = { version = "0.10", features = [ "typed-header" ] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "uuid"]

[lints.clippy]

pedantic.level = "deny"
pedantic.priority = 0

missing_errors_doc.level = "allow"
missing_errors_doc.priority = 1
