[package]
name = "login-with-axum"
version = "0.1.0"
edition = "2024"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bcrypt = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
uuid = { version = "1.16", features = [ "v4", "serde" ] }
jsonwebtoken = { version = "10.1", features = [ "rust_crypto" ] }
futures = "0.3"
tokio = { version = "1.48", features = [ "rt", "macros", "signal", "time" ] }
tower-http = { version = "0.6", features = [ "trace", "fs", "redirect" ] }
axum = "0.8"
axum-extra = { version = "0.12", features = [ "cookie", "typed-header" ] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-axum = "0.2"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono", "uuid"]

[lints.clippy]
pedantic.level = "deny"
pedantic.priority = 0

missing_errors_doc.level = "allow"
missing_errors_doc.priority = 1
